--- a/NT-sillabusz.tex
+++ b/NT-sillabusz.tex
@@ -124,43 +124,35 @@ A Sillabusz az alábbi célokat szolgálja.
 
 \begin{itemize}
 \item
-It specifies a small set of required prerequisite knowledge.
-Below, this is given in the category ``Included, unlimited''
-and to some extent also in ``Included, to be defined''.
+Meghatározza a versenyre szükséges előzetes tudást.
 
 \item
-It serves as a set of guidelines that help decide whether a task is 
-suitable for the International Olympiad in Informatics (IOI).
-Based on this document, the International Scientific Committee (ISC)
-evaluates the task proposals when selecting the competition tasks.
+Segít a versenyzők felkészülésében, a tanároknak a felkészítés tervezésében.
 
 \item
-As a consequence of the previous item, another purpose of the Syllabus 
-is to help the organizers of national olympiads prepare
-their students for the IOI.
+A feladat kitűzőknek támpontot ad, hogy egy-egy feladat melyik kategóriában lehet.
 
 \end{itemize}
 
-The Syllabus aims to achieve these goals by providing a classification of topics and 
-concepts from mathematics and computer science. 
-More precisely, this Syllabus classifies each topic into one of six categories.
-Ordered by topic suitability, these are:
+A fenti célok elérése érdekében az NT Sillabuszban megtalálható minden olyan téma
+(algoritmusok, adatszerkezetek, módszerek, nyelvi eszközök), amely egyáltalán szóba jöhet a versenyen,
+és ezeket kategóriákba soroljuk. A kategóriák tükrözik azt, hogy milyen módon fordulhat elő egy témakör.
+Az IOI Syllabus-nak kategóriákat alkalmazunk, az alábbiakban felsoroljuk, majd bővebben magyarázzuk őket.
+A verseny három korcsoportjában különböző kategóriába sorolhatók a témakörök.
 
 \begin{myitemize}
-\Iincluded Included, unlimited
-\Idefine   Included, to be defined
-\Icodeonly Included, not for task description
-\Inofocus  Outside of focus
-\Iexmaybe  Excluded, but open to discussion
-\Iexcluded Explicitly excluded
+\Iincluded Lehet, megkötések nélkül
+\Idefine   Lehet, de magyarázandó
+\Icodeonly Lehet, de a feladatleírásban nem
+\Inofocus  Hatáskörön kívüli
+\Iexmaybe  Nem lehet, de nyitott a megvitatásra
+\Iexcluded Kizárt
 \end{myitemize}
 
-\noindent
-In the next section we explain the scope of each category.
 
 %}}}
 
-\section{Categories}\label{sec:categories}%{{{
+\section{Kategóriák}\label{sec:categories}%{{{
 
 This Syllabus classifies a selection of topics into six different ca\-tegories. 
 Obviously, such a set of topics can never be exhaustive.
@@ -173,10 +165,6 @@ Topics not explicitly mentioned in the Syllabus should be classified as follows:
 \item Anything else that is not mentioned in the Syllabus is considered Outside of focus.
 \end{itemize}
 
-Note that issues related to the usage of suitable terminology and notations in competition tasks
-are beyond the scope of this document.\footnote{See
-T. Verhoeff: \emph{Concepts, Terminology, and Notations for IOI Competition Tasks},
-\url{http://scienceolympiads.org/ioi/sc/documents/terminology.pdf}}
 
 If there is a particular topic for which you are not sure how it should
 be classified, we invite you to submit a clarification request to the 
@@ -188,10 +176,9 @@ current Syllabus maintainer.
 Here are the definitions of the six possible classifications:
 
 \begin{description}
-\item[\cincl\ Included, unlimited]~\\
-    Topics in this category are considered to be prerequisite knowledge.
-    Contestants are expected to know them. These topics can appear
-    in task descriptions without further clarification.
+\item[\cincl\ Lehet, megkötések nélkül]~\\
+    Ebben a kategóriában lévő témakörök előzetes tudásnak tekintendők. A versenyzőktől elvárt az ismeretük.
+    A feladatleírásban magyarázat nélkül előfordulhatnak.
 
     Example: \emph{Integer} in~\S\ref{subsubsec:NG}
 
