--- a/NT2-sillabusz.tex
+++ b/NT2-sillabusz.tex
@@ -497,6 +497,8 @@ The rest of this document contains the classification of topics.
     \\ \hline % Stacks and queues
     \ccode & \cdefi & \cincl & Prefix összeg (kumulatív összeg)
     \\ \hline % Al3a. prefix sums
+    \ccode & \ccode & \ccode & Számláló tömb, hisztogram
+    \\ \hline % Al3a. histogram
     \cemay & \cdefi & \cincl & Gráfreprezentációk: mátrix, szomszédsági lista, éllista
     \\ \hline % Representations of graphs (adjacency lists, adjacency matrix
     \cexcl & \ccode & \cincl & Unió-holvan (DSU)
@@ -655,11 +657,15 @@ The rest of this document contains the classification of topics.
     %}}}
 
 
-\section {Mathematics}
+\section {Matemaika} % Mathematics
 \label{subsec:mathematics}
 
-\subsection {Arithmetics and Geometry}%{{{
+\subsection{Aritmetika és geometria} % {Arithmetics and Geometry}
 \label{subsubsec:NG}
+
+\ctable {
+
+}
 
     \begin{myitemize}
     \Iincluded Integers, operations (incl.\ exponentiation), comparison
